# bgl-msdf

./: .gitignore  CMakeLists.txt  Device.hpp  Font.hpp  ImageLoader.hpp  OpenCl.cpp  Program.hpp  Readme.md  Taskfile.yml  conan-scripts.sh  conanfile.py  ggg.cpp  main.cpp  vadd.cl
.github/workflows/: codescan.yml
assets/: AABB.h  culling.cl  frustum.cl  vadd.cl
cl/: CMakeLists.txt  Device.hpp  ImageLoader.hpp  OpenCl.cpp  Program.hpp  vadd.cl
font/: CMakeLists.txt  Font.hpp  config.cpp  details.hpp  font.cpp  font.hpp  render.cpp  render.hpp  shaping.cpp  shaping.hpp  text.cpp  text.hpp
profiles/: arm64  default
